--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "ui-challenge-2",
+  "homepage": "https://abunyamin.github.io/ui-challenge-2",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --base=./",
-    "preview": "vite preview"
+    "build": "vite build",
+    "preview": "vite preview",
+    "deploy": "vite build && gh-pages -d dist"
   },
   "dependencies": {
     "aos": "^2.3.4",
