--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ui-challenge-2",
-  "homepage": "https://abunyamin.github.io/ui-challenge-2",
+  "homepage": "https://abunyamin.github.io/ui-challenge-2/", 
   "private": true,
   "version": "1.0.0",
   "type": "module",
@@ -8,10 +8,11 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "vite build && gh-pages -d dist"
+    "deploy": "vite build && gh-pages -d docs"
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
