--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "vite build && gh-pages -d docs"
+    "deploy": "vite build && gh-pages -d dist"
   },
   "dependencies": {
     "aos": "^2.3.4",
